--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"sass": "^1.72.0",
 		"svelte": "^4.2.7",
+		"svelte-awesome-color-picker": "^3.0.6",
 		"vite": "^5.0.3"
 	},
 	"type": "module"
